--- a/PrismUnityTest/App.xaml
+++ b/PrismUnityTest/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="PrismUnityTest.App"
+﻿<prism:PrismApplication x:Class="PrismUnityTest.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PrismUnityTest"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/"
+            >
     <Application.Resources>
          
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
