--- a/PrismUnityTest/MainWindow.xaml
+++ b/PrismUnityTest/MainWindow.xaml
@@ -4,9 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PrismUnityTest"
+        xmlns:prism="http://prismlibrary.com/"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" 
+        Loaded="Window_Loaded"  >
     <Grid>
-        
+        <DockPanel>
+            <StackPanel>
+                <Button Content="Active ViewA" Click="Button_Click"/>
+                <Button Content="DestActive ViewA" Click="Button_Click_1"/>
+                <Button Content="Active ViewB" Click="Button_Click_2"/>
+                <Button Content="DestActive ViewB" Click="Button_Click_3"/>
+                <ContentControl  prism:RegionManager.RegionName="ContentInner"/>
+            </StackPanel>
+        </DockPanel>
+       
     </Grid>
 </Window>
